[package]
name = "mask-110-rmk"
version = "0.1.0"
description = "Keyboard firmware written in Rust"
repository = "https://github.com/marcoster/mask-110-rmk"
readme = "README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
#rmk = { path = "../../rmk/rmk", features = [
rmk = { git = "https://github.com/marcoster/rmk", rev = "93a4fff459edf254a340eee07ad751f4908d392b", features = [
    "nrf52840",
    "split",
    "storage",
    "adafruit_bl"
] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.10", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
critical-section = "1.2"
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
embassy-embedded-hal = { version = "0.6" }
embedded-storage-async = { version = "0.4" }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
